--- a/css/english.css
+++ b/css/english.css
@@ -1,3 +1,14 @@
 body {
-  background-color: #ff8080;
+  background-color: #800000;
+}
+
+header {
+  background-color: #ff4d4d;
+  
+nav {
+  background-color: #ff0000;
+}
+
+aside {
+  background-color: #ff9999;
 }
