--- a/css/index.css
+++ b/css/index.css
@@ -4,11 +4,14 @@ body {
 
 header {
   background-color: #a6a6a6;
+  padding: 15px;
   
 nav {
   background-color: #808080;
+  padding: 5px;
 }
 
 aside {
   background-color: #404040;
+  padding: 30px;
 }
