--- a/css/english.css
+++ b/css/english.css
@@ -4,11 +4,14 @@ body {
 
 header {
   background-color: #ff4d4d;
+  padding: 15px;
   
 nav {
   background-color: #ff0000;
+  padding: 5px;
 }
 
 aside {
   background-color: #ff9999;
+  padding: 30px;
 }
