--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,11 @@ header {
   background-color: #a6a6a6;
   padding: 15px;
 }
-  
+
+nav {
+  background-color: #808080;
+}
+
 nav {
   background-color: #808080;
   padding: 5px;
