--- a/css/english.css
+++ b/css/english.css
@@ -6,6 +6,10 @@ header {
   background-color: #a6a6a6;
   padding: 15px;
 }
+
+nav {
+  background-color: #808080;
+}
   
 nav {
   background-color: #808080;
