--- a/pages.css
+++ b/pages.css
@@ -11,8 +11,7 @@ nav {
   background-color: #808080;
   text-align: left;
   padding: 5px;
-  overflow-x: scroll;
-  overflow-y: hidden;
+  overflow: scroll;
 }
 
 aside {
