--- a/pages.css
+++ b/pages.css
@@ -26,7 +26,7 @@ h1 {
   background-color: #808080;
   border: none;
   color: #ffffff;
-  padding: 5px;
+  padding: 5px 20px;
   margin: -2px;
   text-align: center;
   cursor: pointer;
