--- a/navigation.css
+++ b/navigation.css
@@ -10,6 +10,7 @@
 }
 .home:hover {
   background-color: #404040;
+  color: #ffffff;
 }
 
 /* Science */
@@ -24,6 +25,7 @@
 }
 .science:hover {
   background-color: #404040;
+  color: #cc80ff;
 }
 
 /* Freshman Advisory */
@@ -38,6 +40,7 @@
 }
 .freshman-advisory:hover {
   background-color: #404040;
+  color: #ffffff;
 }
 
 /* English */
@@ -52,6 +55,7 @@
 }
 .english:hover {
   background-color: #404040;
+  color: #ff8080;
 }
 
 /* Band */
@@ -66,6 +70,7 @@
 }
 .band:hover {
   background-color: #404040;
+  color: #ffffff;
 }
 
 /* History */
@@ -80,6 +85,7 @@
 }
 .history:hover {
   background-color: #404040;
+  color: #80ff80;
 }
 
 /* Spanish */
@@ -94,6 +100,7 @@
 }
 .spanish:hover {
   background-color: #404040;
+  color: #ffbf80;
 }
 
 /* Algebra */
@@ -108,4 +115,5 @@
 }
 .algebra:hover {
   background-color: #404040;
+  color: #80bfff;
 }
