--- a/pages.css
+++ b/pages.css
@@ -1,23 +1,8 @@
-body {
-  background-color: #404040;
-}
+/* Page Sections */
+body {background-color: #404040;}
+header {background-color: #a6a6a6; padding: 15px;}
+nav {background-color: #808080; text-align: left; padding: 5px;}
+aside {background-color: #cccccc; padding: 30px;}
 
-header {
-  background-color: #a6a6a6;
-  padding: 15px;
-}
-
-nav {
-  background-color: #808080;
-  text-align: left;
-  padding: 5px;
-}
-
-aside {
-  background-color: #cccccc;
-  padding: 30px;
-}
-
-h1 {
-  text-align: center;
-}
+/* Headers */
+h1 {text-align: center;}
