--- a/pages.css
+++ b/pages.css
@@ -8,6 +8,6 @@ aside {background-color: #cccccc; padding: 30px;}
 h1 {text-align: center;}
 
 /* Dividers */
-div.dublin {border: 2px; padding: 10px;}
-div.google {border: 2px; padding: 10px;}
-div.games {border: 2px; padding: 10px;}
+div.dublin {border: 2px; padding: 10px; float: left;}
+div.google {border: 2px; padding: 10px; float: left;}
+div.games {border: 2px; padding: 10px; float: left;}
