--- a/pages.css
+++ b/pages.css
@@ -8,4 +8,4 @@ aside {background-color: #cccccc; padding: 30px;}
 h1 {text-align: center;}
 
 /* Dividers */
-div.box {background-color: #cccccc; border-style: solid; border-width: 2px; padding: 10px; margin: 5px; float: left;}
+div.websites {background-color: #cccccc; border-style: solid; border-width: 2px; padding: 10px; margin: 5px; float: left;}
