--- a/pages.css
+++ b/pages.css
@@ -6,6 +6,7 @@ aside {background-color: #cccccc; padding: 30px;}
 
 /* Headers */
 h1 {text-align: center;}
+h2 {text-align: center;}
 
 /* Dividers */
-div.websites {background-color: #cccccc; border-style: solid; border-width: 2px; padding: 10px; margin: 5px; float: left;}
+div.websites {background-color: #cccccc; border-style: solid; border-width: 2px; margin: 5px; float: left; padding-top: 10px; padding-bottom: 10px; padding-left: 10px; padding-right: 30px;}
