--- a/pages.css
+++ b/pages.css
@@ -2,11 +2,11 @@
 body {background-color: #404040;}
 header {background-color: #a6a6a6; padding: 15px;}
 nav {background-color: #808080; text-align: left; padding: 5px;}
-aside {background-color: #cccccc; text-align: center; padding: 30px;}
+aside {background-color: #cccccc; padding: 30px;}
 
 /* Headers */
 h1 {text-align: center;}
 h2 {text-align: center;}
 
 /* Dividers */
-div.websites {background-color: #ffffff; text-align: left; border-style: solid; border-width: 2px; margin: 5px; float: left; padding: 10px;}
+div.websites {background-color: #ffffff; width: 100px; text-align: left; border-style: solid; border-width: 2px; margin: 5px; float: left; padding: 10px;}
