--- a/css/pages.css
+++ b/css/pages.css
@@ -10,4 +10,13 @@ h2 {text-align: center;}
 
 /* Dividers */
 div.websites {background-color: #ffffff; width: 250px; text-align: left; border-style: solid; border-width: 2px; margin: 5px; float: left; padding: 10px;}
+
+/* Align */
 div.home-align {margin-left: 200px;}
+div.science-align {margin-left: 0px;}
+div.freshman-advisory-align {margin-left: 0px;}
+div.english-align {margin-left: 0px;}
+div.band-align {margin-left: 0px;}
+div.history-align {margin-left: 0px;}
+div.spanish-align {margin-left: 0px;}
+div.algebra-align {margin-left: 0px;}
