--- a/css/pages.css
+++ b/css/pages.css
@@ -9,14 +9,14 @@ h1 {text-align: center;}
 h2 {text-align: center;}
 
 /* Dividers */
-div.websites {background-color: #ffffff; width: 250px; text-align: left; border-style: solid; border-width: 2px; margin: 5px; float: left; padding: 10px;}
+div.websites {background-color: #ffffff; width: 20%; text-align: left; border-style: solid; border-width: 2px; margin: 5px; float: left; padding: 10px;}
 
 /* Align */
-div.home-align {margin-left: 200px;}
-div.science-align {margin-left: 500px;}
-div.freshman-advisory-align {margin-left: 0px;}
-div.english-align {margin-left: 350px;}
-div.band-align {margin-left: 0px;}
-div.history-align {margin-left: 350px;}
-div.spanish-align {margin-left: 0px;}
-div.algebra-align {margin-left: 350px;}
+div.home-align {margin-left: 20%;}
+div.science-align {margin-left: 40%;}
+div.freshman-advisory-align {margin-left: 40%;}
+div.english-align {margin-left: 30%;}
+div.band-align {margin-left: 40%;}
+div.history-align {margin-left: 30%;}
+div.spanish-align {margin-left: 40%;}
+div.algebra-align {margin-left: 30%;}
