--- a/css/pages.css
+++ b/css/pages.css
@@ -10,6 +10,7 @@ h2 {text-align: center;}
 
 /* Dividers */
 div.websites {background-color: #ffffff; width: 250px; height: auto; text-align: left; border-style: solid; border-width: 2px; margin: 5px; float: left; padding: 10px;}
+div.summary {text-align: center;}
 
 /* Align */
 div.home-align {margin-left: 16%; margin-right: auto}
