--- a/css/pages.css
+++ b/css/pages.css
@@ -1,7 +1,7 @@
 /* Page Sections */
 body {background-color: #404040;}
 header {background-color: #a6a6a6; padding: 15px;}
-nav {background-color: #808080; text-align: left; padding: 5px;}
+nav {background-color: #808080; text-align: left; padding: auto;}
 aside {background-color: #cccccc; text-align: left; padding: 30px;}
 
 /* Headers */
