--- a/css/pages.css
+++ b/css/pages.css
@@ -11,6 +11,7 @@ h2 {text-align: center;}
 /* Links */
 a {color: #0000ff;}
 a:visited {color: #0000ff;}
+a:active {color: #0000ff;}
 
 /* Dividers */
 div.websites {background-color: #ffffff; width: 250px; height: auto; text-align: left; border-style: solid; border-width: 2px; margin: 5px; float: left; padding: 10px;}
