--- a/css/pages.css
+++ b/css/pages.css
@@ -9,7 +9,7 @@ h1 {text-align: center;}
 h2 {text-align: center;}
 
 /* Links */
-a {color: #0000ff;}
+a:link {color: #0000ff;}
 a:visited {color: #0000ff;}
 a:active {color: #0000ff;}
 
