--- a/css/pages.css
+++ b/css/pages.css
@@ -4,7 +4,7 @@ header {background-color: #a6a6a6; padding: 15px;}
 nav {background-color: #808080; text-align: left; padding: 1px;}
 aside {background-color: #cccccc; text-align: left; padding: 30px;}
 
-/* Text */
+/* Headers */
 h1 {text-align: center;}
 h2 {text-align: center;}
 
