--- a/css/pages.css
+++ b/css/pages.css
@@ -12,7 +12,7 @@ h2 {text-align: center;}
 a:link {color: #0000ff;}
 a:visited {color: #0000ff;}
 a:hover {color: #0000ff; font-weight:bold;}
-a:active {color: #0000ff;}
+a:active {color: #0000ff; font-weight:bold;}
 
 /* Dividers */
 div.websites {background-color: #ffffff; width: 250px; height: auto; text-align: left; border-style: solid; border-width: 2px; margin: 5px; float: left; padding: 10px;}
