--- a/css/pages.css
+++ b/css/pages.css
@@ -15,7 +15,7 @@ a:hover {color: #0000ff; font-weight:bold;}
 a:active {color: #0000ff; font-weight:bold;}
 
 /* Dividers */
-div.websites {background-color: #ffffff; width: 250px; height: auto; text-align: left; border-style: solid; border-width: 2px; margin: 5px; float: left; padding: 10px;}
+div.websites {background-color: #ffffff; width: 250px; height: 200px; text-align: left; border-style: solid; border-width: 2px; margin: 5px; float: left; padding: 10px;}
 div.summary {text-align: center;}
 
 /* Align */
