--- a/css/pages.css
+++ b/css/pages.css
@@ -19,11 +19,11 @@ div.websites {background-color: #ffffff; width: 250px; height: 200px; text-align
 div.summary {text-align: center;}
 
 /* Align */
-div.home-align {margin-left: 5%; margin-right: auto}
-div.science-align {margin-left: 40%; margin-right: auto}
-div.freshman-advisory-align {margin-left: 40%; margin-right: auto}
-div.english-align {margin-left: 28%; margin-right: auto}
-div.band-align {margin-left: 28%; margin-right: auto}
-div.history-align {margin-left: 28%; margin-right: auto}
-div.spanish-align {margin-left: 40%; margin-right: auto}
-div.algebra-align {margin-left: 28%; margin-right: auto}
+div.home-align {margin-left: 5%; margin-right: auto; height: 200px;}
+div.science-align {margin-left: 40%; margin-right: auto; height: 200px;}
+div.freshman-advisory-align {margin-left: 40%; margin-right: auto; height: 200px;}
+div.english-align {margin-left: 28%; margin-right: auto; height: 200px;}
+div.band-align {margin-left: 28%; margin-right: auto; height: 200px;}
+div.history-align {margin-left: 28%; margin-right: auto; height: 200px;}
+div.spanish-align {margin-left: 40%; margin-right: auto; height: 200px;}
+div.algebra-align {margin-left: 28%; margin-right: auto; height: 200px;}
