--- a/css/pages.css
+++ b/css/pages.css
@@ -3,6 +3,7 @@ body {background-color: #404040;}
 header {background-color: #a6a6a6; padding: 15px;}
 nav {background-color: #808080; text-align: left; padding: 1px;}
 aside {background-color: #cccccc; text-align: left; padding: 30px;}
+footer {background-color: #808080; padding: 15px;}
 
 /* Headers */
 h1 {text-align: center;}
