--- a/css/navigation.css
+++ b/css/navigation.css
@@ -37,3 +37,8 @@
 .algebra {background-color: #808080; border: none; color: #ffffff; padding: 10px 30px; margin: -1px; text-align: center; cursor: pointer;}
 .algebra:hover {background-color: #404040; color: #80bfff;}
 .algebra:active {border: none;}
+
+/* About */
+.home {background-color: #808080; border: none; color: #ffffff; padding: 10px 30px; margin: -1px; text-align: center; cursor: pointer;}
+.home:hover {background-color: #404040; color: #ffffff;}
+.home:active {border: none;}
